--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-router-dom": "6",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
