--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@tanstack/react-query": "^4.35.3",
     "apisauce": "^3.0.1",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
@@ -25,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
