--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
+    "react-accessible-dropdown-menu-hook": "^4.0.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
