--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
     "tailwindcss": "^3.3.3",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
