--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.66.1",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1",
+    "vite-plugin-checker": "^0.6.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -44,9 +45,25 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,scss}": [
+      "prettier --write"
+    ],
+    "*.{js,ts,tsx,jsx}": [
+      "eslint --fix"
+    ]
   }
 }
