--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apisauce": "^3.0.1",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.29",
@@ -45,16 +46,16 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-security": "^1.7.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
