--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "formik": "^2.4.5",
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
