--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.29",
