--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "react-waypoint": "^10.3.0",
     "sass": "^1.66.1",
     "shortid": "^2.2.16",
     "tailwindcss": "^3.3.3",
