--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "lodash": "^4.17.21",
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.29",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-accessible-dropdown-menu-hook": "^4.0.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-query": "^3.39.3",
