--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/modules"]
+[submodule "pbl6-modules"]
 	path = src/modules
-	url = https://github.com/luunminh/pbl6-modules
+	url = https://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@github.com/luunminh/pbl6-modules
