--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build-app": "tsc && vite build",
+    "build": "yarn init:modules && yarn run build-app",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "init:modules": "bash init-modules.sh"
@@ -16,9 +18,10 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/node": "^20.9.0",
+    "apisauce": "2.1.5",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
-    "apisauce": "^3.0.1",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
