--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/node": "^20.9.0",
-    "apisauce": "2.1.5",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "@types/node": "^20.9.0",
+    "apisauce": "2.1.5",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
@@ -35,6 +35,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-accessible-dropdown-menu-hook": "^4.0.0",
+    "react-currency-format": "^1.1.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
