--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "react": "^18.2.0",
     "react-accessible-dropdown-menu-hook": "^4.0.0",
     "react-currency-format": "^1.1.0",
-    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
+    "react-input-mask": "^2.0.4",
+    "react-datepicker": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
@@ -61,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "@types/react-datepicker": "^4.10.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.8.0",
