--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-charts": "^6.18.3",
+    "@nivo/bar": "^0.84.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
@@ -25,12 +27,16 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "d3": "^7.8.5",
+    "d3-shape": "^3.2.0",
     "dayjs": "^1.11.9",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
+    "libphonenumber-js": "^1.10.51",
     "lodash": "^4.17.21",
     "mui-datatables": "^4.3.0",
+    "nivo": "^0.31.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.29",
     "qs": "^6.11.2",
